[package]
name = "typoo"
version = "1.1.0"
edition = "2021"
authors = ["zape"]
repository = "https://github.com/sangeeth-606/typoo"
description = "A terminal-based monkeyType"
keywords = ["typing", "speed-test", "terminal", "cli"]
readme = "README.md"
license = "Apache-2.0"
categories = ["command-line-utilities", "games"]

[dependencies]
crossterm = "0.27"
rand = "0.8"
self_update = "0.36"

[[bin]]
name = "typoo"
path = "src/main.rs"